# embuer

./: .gitignore  BOOTX64.EFI  BUILDING.md  Cargo.toml  DBUS_STATUS_USAGE.md  Dockerfile.amd64  INSTALLER.md  INTEGRATION.md  Makefile  PROGRESS_TRACKING.md  README.md  archlinux.sh  bootstrap.sh  bootstrap_automated.sh  build.rs  create_archlinux.sh  embuer.h  example_code.rs  mmx64.efi  refind.conf
.github/workflows/: release.yml  rust.yml  shim.yml
examples/: README.md  embuer_example.c  status_monitor.c  update_confirmation.c
rootfs/usr/lib/systemd/system/: embuer.service
rootfs/usr/share/dbus-1/system.d/: org.neroreflex.embuer.conf
rootfs/usr/share/embuer/: private_key.pem  public_key_pkcs1.pem
rpm/: embuer.spec
scripts/: build-shim-aarch64.sh  build-shim-amd64.sh
src/: btrfs.rs  config.rs  core.rs  dbus.rs  ffi.rs  hash_stream.rs  lib.rs  main.rs  manifest.rs  progress_stream.rs  service.rs  status.rs
tests/: config_tests.rs  hash_stream_tests.rs  integration_signature_tests.rs  pem_tests.rs  signature_tests.rs
