[package]
name = "embuer"
license = "GPL-2.0-or-later"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
version = "0.1.1"
edition = "2021"

[lib]
name = "embuer"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "embuer-service"
path = "src/bin/embuer-service.rs"

[[bin]]
name = "embuer-client"
path = "src/bin/embuer-client.rs"

[[bin]]
name = "test-signature"
path = "src/bin/test-signature.rs"

[dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "process"] }
rsa = { version = "0.9.7", features = ["pem", "std", "u64_digit"] }
rand = "0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2"
zbus = "^5"
reqwest = { version = "^0", features = ["stream", "json", "gzip", "rustls-tls"] }
futures-util = "^0"
astral-tokio-tar = { version = "^0", features = [] }
futures = "^0"
bytes = "^1"
tokio-util = "^0"
tokio-stream = "^0"
users = "^0"
nix = { version = "^0", features = ["fs"] }
log = "^0.4"
env_logger = "^0.11"
chrono = "^0.4"
argh = "^0.1"
owo-colors = "^4"
sha2 = "^0.10"
hex = "^0.4"
#libc = "^0"

[dev-dependencies]
tempfile = "3"
